5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1800_2569.log
== SUBMITION (2019-06-13 00:27:36) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("entre com o vetor:")))
i=0
m= sum(v)/size(v)

for y in range(size(V)):
	i=i+(y-b)**2
i=sqrt(i/(size(n)-1))
print(round(i,3))


-- EXECUTION TIME:
1.24246
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2569/main.py", line 7, in <module>
    for y in range(size(V)):
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:29:12) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("entre com o vetor:")))

m= sum(v)/size(v)
i=0
for y in range(size(v)):
	i=i+(y-m)**2
i=sqrt(i/(size(n)-1))
print(round(i,3))


-- EXECUTION TIME:
0.956029
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2569/main.py", line 9, in <module>
    i=sqrt(i/(size(n)-1))
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:29:42) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("entre com o vetor:")))

m= sum(v)/size(v)
i=0
for y in range(size(v)):
	i=i+(y-m)**2
i=sqrt(i/(size(v)-1))
print(round(i,3))


-- EXECUTION TIME:
1.11966
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
61.959
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
28.284
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
entre com o vetor:2.733
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:29:46) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("entre com o vetor:")))

m= sum(v)/size(v)
i=0
for y in range(size(v)):
	i=i+(y-m)**2
i=sqrt(i/(size(v)-1))
print(round(i,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:32:12) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("entre com o vetor:")))

m= sum(v)/size(v)
i=0
for y in v:
	i=i+(y-m)**2
i=sqrt(i/(size(v)-1))
print(round(i,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:32:26) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("entre com o vetor:")))

m= sum(v)/size(v)
i=0
for y in v:
	i=i+(y-m)**2
i=sqrt(i/(size(v)-1))
print(round(i,3))


-- EXECUTION TIME:
1.15866
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
